@@ -1,6 +1,7 @@
 *** Changelog ***
 
 = x.x.x - 2023-xx-xx =
+* Fix - Lookup existing refunds by refund ID when processing webhooks.
 
 = 7.2.0 - 2023-03-09 =
 * Fix - Hide PRB box in checkout block when PRBs disabled.
